# ft_irc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  flowchart.drawio  irc_commands.txt
bots/: .gitignore  GeminiBot.cpp  GeminiBot.hpp  GeminiBotMain.cpp  IRCBot.cpp  IRCBot.hpp  LogBot.cpp  LogBot.hpp  Makefile  journalbot.service  main.cpp  run_journal_bot.sh
include/: Channel.hpp  ChannelManager.hpp  Client.hpp  ClientIndex.hpp  CommandProcessor.cpp  CommandProcessor.hpp  CommandRunner.hpp  ConnectionManager.hpp  Error.hpp  EventLoop.hpp  EventLoopEpoll.hpp  EventLoopPoll.hpp  IRCValidator.hpp  MessageParser.hpp  PingPongManager.hpp  PongManager.hpp  Server.hpp  SocketManager.hpp  channel.hpp  commandHandlers.hpp  common.h  common.hpp  message.hpp  pingPong.hpp  responses.hpp  server.hpp
oldCommands/: CommandProcessor.cpp  CommandProcessor.hpp  nick.cpp  pass.cpp  quit.cpp  topic.cpp  user.cpp  welcome.cpp
src/: main.cpp
src/channel/: Channel.cpp  channel.cpp  channel.h
src/commands/: PingPongManager.cpp  cap.cpp  commandNick.cpp  commandPass.cpp  commandUser.cpp  invite.cpp  join.cpp  kick.cpp  mode.cpp  motd.cpp  nick.cpp  notice.cpp  part.cpp  pass.cpp  ping.cpp  pong.cpp  privmsg.cpp  quit.cpp  silentIgnore.cpp  topic.cpp  user.cpp
src/error/: Error.cpp
src/proxy/: CommandProcessor.cpp  CommandRunner.cpp  MessageParser.cpp
src/server/: ChannelManager.cpp  Client.cpp  Client.hpp  ClientIndex.cpp  ConnectionManager.cpp  EventLoop.cpp  EventLoopEpoll.cpp  EventLoopPoll.cpp  PingPongManager.cpp  PongManager.cpp  Server.cpp  SocketManager.cpp  server.cpp  server.h  server.hpp
src/utils/: EventLoopFactory.cpp  IRCValidator.cpp  message.cpp  message.hpp
tests/: CMakeLists.txt  ChannelManagerTests.cpp  InvalidNamesTests.cpp  InviteTests.cpp  JoinTests.cpp  KickTests.cpp  ModeTests.cpp  NickNameTests.cpp  PartQuitTests.cpp  ProxyParsingTest.cpp  TestRunner.hpp  TestSetup.hpp  ThreadReversedTestSetup.hpp  TopicTests.cpp  channelTests.cpp  commandTests.cpp  messageHandlingTests.cpp  privmsgNoticeTest.cpp  stress_test.cpp  tests.cpp
